--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+#enabling H2 Console (IHM)
 spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:file:~/sample
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.show-sql=true
